Styling | Fixed KanaDisplay Diagraph Blurring (#5)

--- a/src/styles/sass/components/game/KanaDisplay.module.scss
+++ b/src/styles/sass/components/game/KanaDisplay.module.scss
@@ -24,7 +24,7 @@ $diagraph-margin: -10px;
 }
 
 @mixin blur {
-  color: transparent;
+  color: transparent !important;
   text-shadow: 0 0 40px rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(5px);
 }
