--- a/src/styles/sass/components/layout/ParallaxBackground.module.scss
+++ b/src/styles/sass/components/layout/ParallaxBackground.module.scss
@@ -12,7 +12,7 @@
   position: absolute;
   min-height: 100%;
   height: 100vh;
-  z-index: 1;
+  z-index: 0;
   overflow-y: hidden;
 }
 
