--- a/src/styles/sass/components/pages/LandingPage.module.scss
+++ b/src/styles/sass/components/pages/LandingPage.module.scss
@@ -104,4 +104,5 @@
   color: white;
   text-align: center;
   font-family: 'Montserrat', sans-serif;
+  z-index: 100;
 }
